--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,16 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>twitter</title>
 </head>
-<body >
-<noscript>
-    <strong>We're sorry but twitter doesn't work properly without JavaScript enabled. Please enable it to
-        continue.</strong>
-</noscript>
-<div id="app"></div>
-<!-- built files will be auto injected -->
-</body>
-</html>
-<style>
-    body {
-        overflow: auto !important;
-    }
-</style>
 
+<body>
+    <noscript>
+        <strong>We're sorry but twitter doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+    <script type="text/javascript" src="./ipConfig.js"></script>
+
+</body>
+
+</html>
